--- a/Dockerfile-django
+++ b/Dockerfile-django
@@ -1,14 +1,19 @@
 FROM python:3
 
-ENV APPDIR=/app
-WORKDIR $APPDIR
+ARG APPDIR=/app
 
-ADD . $APPDIR
+RUN true \
+    && groupadd app \
+        --gid 1000 \
+    && useradd app \
+        --gid 1000 \
+        --uid 1000 \
+        --create-home \
+        --home-dir $APPDIR
 
-RUN apt-get update && apt-get install \
-  -y --no-install-recommends python3 python3-virtualenv
-
-RUN python3 -m venv venv
-RUN . venv/bin/activate
 COPY requirements.txt .
+RUN apt-get update && apt-get install nano
 RUN pip install -r requirements.txt
+
+USER app
+WORKDIR $APPDIR
