--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,5 +12,7 @@ services:
       dockerfile: Dockerfile-django
     depends_on:
       - db
+    volumes:
+      - ./:/app
     ports:
-      - "8000:8000"
+      - "8080:8000"
