--- a/Dockerfile-django
+++ b/Dockerfile-django
@@ -12,7 +12,7 @@ RUN true \
         --home-dir $APPDIR
 
 COPY requirements.txt .
-RUN apt-get update && apt-get install nano
+RUN apt-get update && pip install psycopg2-binary
 RUN pip install -r requirements.txt
 
 USER app
