--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,4 +15,5 @@ services:
     volumes:
       - ./:/app
     ports:
-      - "8080:8000"
+      - "8000:8000"
+    command: python manage.py runserver 0.0.0.0:8000
